sass/top-rated.scss
@import "global";

.fullpage-list {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 20px;
  margin-left: 10px;

  @media screen and (max-width: 1280px) {
    grid-template-columns: repeat(4, 1fr);
  }

  @media screen and (max-width: 1050px) {
    grid-template-columns: repeat(3, 1fr);
  }

  @media screen and (max-width: 780px) {
    grid-template-columns: repeat(2, 1fr);
  }

  @media screen and (max-width: 500px) {
    grid-template-columns: 1fr;
    .list-element {
      margin: auto;
    }
  }
}

#top-rated {
  .poster {
    @include poster-width(220px);
  }
}
.filmlist-pages {
  @include flex-row;
  align-items: center;
  gap: 10px;
  transform: translate(-50%, 0%);
  position: fixed;
  bottom: 10px;
  left: 50%;

  input {
    all: unset;
    background: $color3;
    color: $color5;
    width: 3rem;
    height: 2rem;
    font-size: 1.5rem;
    text-align: center;
  }

  .filmlist-page {
  }

  .filmlist-page-btn {
    line-height: 1rem;
    font-size: 2rem;
  }
}

